Add income to quick nav, add conditionals for views

--- a/app/views/communities/sections/_background.html.haml
+++ b/app/views/communities/sections/_background.html.haml
@@ -13,7 +13,7 @@
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/background/population'
 
--if @community.show_income_section?
+-if @community.show_income?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/background/income'
 
