--- a/app/views/communities/sections/electricity/sales/_summary.html.haml
+++ b/app/views/communities/sections/electricity/sales/_summary.html.haml
@@ -1,7 +1,3 @@
-.mb-3
-  %small.text-muted.mb-3
-    %strong Reported by:
-    = @community.reporting_entity.name
 
 - if latest_sale
   .row.g-3.mb-3
@@ -10,7 +6,7 @@
         .d-flex.flex-grow-1.align-items-center.bg-body-secondary.rounded.p-3
           %i.bi.bi-lightning-fill.text-warning.fs-3.me-3
           .flex-grow-1
-            .text-muted Total Sales (#{latest_year})
+            .text-muted Total Energy Delivered (#{latest_year})
             %p.fw-semibold.mb-0= number_with_delimiter(latest_sale.total_sales) + " MWh"
 
     .col-12.col-md-6.col-lg-4
@@ -28,3 +24,7 @@
           .flex-grow-1
             .text-muted Total Revenue (#{latest_year})
             %p.fw-semibold.mb-0= number_to_currency(latest_sale.total_revenue, precision: 0)
+.mb-3
+  %small.text-muted.mb-3
+    %strong Reported by:
+    = @community.reporting_entity.name
