Rename section to Sales, replace average rates chart with Energy Sold Chart

--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -13,6 +13,6 @@
 - if @community.show_bulk_fuel_facilities?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/electricity/bulk_fuel_facilities'
-- if @community.show_sales_revenue?
+- if @community.show_sales?
   .my-5.mx-3.mx-md-5
-    = render 'communities/sections/electricity/sales_revenue'
+    = render 'communities/sections/electricity/sales'
