--- a/app/views/communities/sections/electricity/sales/_data.html.haml
+++ b/app/views/communities/sections/electricity/sales/_data.html.haml
@@ -4,7 +4,7 @@
       %tr
         %th Customer Type
         %th Customers 
-        %th Sales (Mwh)
+        %th Sales (MWh)
         %th Revenue ($)
         %th Year
     %tbody
