--- a/app/views/communities/sections/electricity/sales/_summary.html.haml
+++ b/app/views/communities/sections/electricity/sales/_summary.html.haml
@@ -6,7 +6,7 @@
         .d-flex.flex-grow-1.align-items-center.bg-body-secondary.rounded.p-3
           %i.bi.bi-lightning-fill.text-warning.fs-3.me-3
           .flex-grow-1
-            .text-muted Total Energy Delivered (#{latest_year})
+            .text-muted Total Energy Sold (#{latest_year})
             %p.fw-semibold.mb-0= number_with_delimiter(latest_sale.total_sales) + " MWh"
     
     .col-12.col-md-6.col-lg-4
