--- a/app/views/communities/sections/electricity/sales/_customer_breakdown.html.haml
+++ b/app/views/communities/sections/electricity/sales/_customer_breakdown.html.haml
@@ -1,18 +1,18 @@
 - charts = []
 
 - if latest_sale && (latest_sale.residential_revenue || latest_sale.commercial_revenue)
-  - charts << { title: "Revenue by Customer Type (#{latest_year})",
-                path:  revenue_by_customer_type_community_charts_path(@community),
+  - charts << { title: "Revenue (#{latest_year})",
+                path:  customer_breakdown_revenue_community_charts_path(@community),
                 opts:  { prefix: '$ ', donut: true } }
 
 - if latest_sale && (latest_sale.residential_sales || latest_sale.commercial_sales)
-  - charts << { title: "Sales by Customer Type (#{latest_year})",
-                path:  sales_by_customer_type_community_charts_path(@community),
+  - charts << { title: "Sales (#{latest_year})",
+                path:  customer_breakdown_sales_community_charts_path(@community),
                 opts:  { suffix: ' MWh', donut: true } }
 
 - if latest_sale && (latest_sale.residential_customers || latest_sale.commercial_customers)
-  - charts << { title: "Customers by Customer Type (#{latest_year})",
-                path:  customers_by_customer_type_community_charts_path(@community),
+  - charts << { title: "Customers (#{latest_year})",
+                path:  customer_breakdown_customers_community_charts_path(@community),
                 opts:  { donut: true } }
 
 .row.g-3.row-cols-1.row-cols-md-2.row-cols-lg-3.justify-content-center
