--- a/app/views/metadata/tabs/_metadata.html.haml
+++ b/app/views/metadata/tabs/_metadata.html.haml
@@ -1,6 +1,8 @@
 .mb-3
   %h3.mb-4.fs-4 Metadata
-  .border.rounded.bg-light-subtle.p-4.d-flex.flex-column.flex-md-row.align-items-start.justify-content-between.gap-3{'data-controller' => 'copy'}
+  %p.text-muted
+    This dataset uses the OEMetadata standard,
+    = link_to 'learn more.', 'https://acep-aedg.github.io/aedg-metadata/oemedata/', target: '_blank'
 
     / Button: first on small screens, last on md+, right-aligned when stacked
     %button.btn.btn-outline-secondary.btn-sm.d-inline-flex.order-0.order-md-1.ms-auto.ms-md-3.align-self-start{'data-action' => 'click->copy#copy', 'data-copy-target' => 'button'}
@@ -9,5 +11,5 @@
 
     / Pre: second on small screens, first on md+
     %pre.mb-0.flex-grow-1.w-100.overflow-auto.order-1.order-md-0(style="word-break: break-word;")
-      %code.d-block{'data-copy-target' => 'source'}= JSON.pretty_generate(metadatum.cleaned_data)
+      %code.d-block{'data-copy-target' => 'source'}= JSON.pretty_generate(metadatum.data)
   
