Move explicilty defined colors into charts_helper

--- a/app/views/communities/sections/background/population/_population_age_chart.html.haml
+++ b/app/views/communities/sections/background/population/_population_age_chart.html.haml
@@ -39,5 +39,5 @@
   stacked:  true,
   xtitle:   "Population Count",
   ytitle:   "Age Group",
-  colors:   ["#1f77b4", "#ff7f0e"],
+  colors:   [color(:blue), color(:orange)],
   download: { filename: "#{@community.name}age_distribution" }
