--- a/app/views/communities/sections/background/population/_population_gender_pie.html.haml
+++ b/app/views/communities/sections/background/population/_population_gender_pie.html.haml
@@ -39,5 +39,5 @@
   id:       chart_id,
   title:    "Gender Distribution",
   donut:    true,
-  colors:   ["#4e79a7", "#f28e2b"],
+  colors:   [color(:soft_blue), color(:soft_orange)],
   download: { filename: "#{@community.name}gender_distribution_#{selected_period.end_year}" }
