--- a/app/views/communities/sections/background/population/_population_employment.html.haml
+++ b/app/views/communities/sections/background/population/_population_employment.html.haml
@@ -2,6 +2,6 @@
     title: "Employment and Unemployment Insurance Claimants Over Time",
     xtitle: "Year",
     ytitle: "Residents",
-    colors: ["#1f77b4", "#ff7f0e"],
+    colors: [color(:blue), color(:orange)],
     download: {filename: "#{@community.name}_monthly_production_chart"}
 
