Adjust household income charts to use CHART_COLORS

--- a/app/views/communities/sections/background/income/_household_income_distribution_chart.html.haml
+++ b/app/views/communities/sections/background/income/_household_income_distribution_chart.html.haml
@@ -10,5 +10,15 @@
   round:    2,
   zeros:    true,
   ytitle:   "Household Income Brackets",
+  colors:   [ color(:dark_blue),
+              color(:light_blue),
+              color(:dark_green),
+              color(:soft_green),
+              color(:medium_yellow),
+              color(:orange),
+              color(:light_brown),
+              color(:dark_brown),
+              color(:light_red),
+              color(:dark_red)],
   download: { filename: hh_income_bracket_title.parameterize },
   library: { plugins: { legend: { display:true, position: 'right', reverse: true }, tooltip: { mode: 'index', intersect: false, reverse: true } }}
