--- a/app/views/communities/sections/background/income/_income_chart.html.haml
+++ b/app/views/communities/sections/background/income/_income_chart.html.haml
@@ -5,4 +5,5 @@
   title:    income_title,
   xtitle:   "Year",
   ytitle:   "Income (USD)",
+  colors:   [color(:blue), color(:orange)],
   download: { filename: income_title.parameterize }
