--- a/app/views/communities/sections/background/income/_poverty_rate_chart.html.haml
+++ b/app/views/communities/sections/background/income/_poverty_rate_chart.html.haml
@@ -5,4 +5,5 @@
   title:    poverty_rate_title,
   xtitle:   "Year",
   ytitle:   "Poverty Rate",
+  colors:   [color(:blue)],
   download: { filename: poverty_rate_title.parameterize }
