--- a/app/views/communities/sections/electricity/_sales.html.haml
+++ b/app/views/communities/sections/electricity/_sales.html.haml
@@ -3,30 +3,30 @@
   %h4#sales.mb-0.me-3.py-3.anchor-offset Sales
   %hr.flex-grow-1.mt-1.mb-0
 
-- latest_sale = @community.reporting_entity.latest_sale
-- latest_year = latest_sale.year
-= render "communities/sections/electricity/sales/summary", latest_sale: latest_sale, latest_year: latest_year
-.mb-3
-  .d-flex.justify-content-between.align-items-center
-    .nav.nav-tabs
-      %li.nav-item
-        = link_to "#energy_sold", class: "nav-link active", data: { bs_toggle: "tab" } do
-          %i.bi.bi-bar-chart-fill.me-1
-          Energy Sold
-      - if latest_sale&.any_customer_type_data?
-        %li.nav-item
-          = link_to "#customer-breakdown", class: "nav-link", data: { bs_toggle: "tab" } do
-            %i.bi.bi-pie-chart.me-1
-            Customer Breakdown
-      %li.nav-item
-        = link_to "#sales-data", class: "nav-link", data: { bs_toggle: "tab" } do
-          %i.bi.bi-table.me-1
-          Data
+-# - latest_sale = @community.reporting_entity.latest_sale
+-# - latest_year = latest_sale.year
+= render "communities/sections/electricity/sales/summary"
+-# .mb-3
+-#   .d-flex.justify-content-between.align-items-center
+-#     .nav.nav-tabs
+-#       %li.nav-item
+-#         = link_to "#energy_sold", class: "nav-link active", data: { bs_toggle: "tab" } do
+-#           %i.bi.bi-bar-chart-fill.me-1
+-#           Energy Sold
+-#       - if latest_sale&.any_customer_type_data?
+-#         %li.nav-item
+-#           = link_to "#customer-breakdown", class: "nav-link", data: { bs_toggle: "tab" } do
+-#             %i.bi.bi-pie-chart.me-1
+-#             Customer Breakdown
+-#       %li.nav-item
+-#         = link_to "#sales-data", class: "nav-link", data: { bs_toggle: "tab" } do
+-#           %i.bi.bi-table.me-1
+-#           Data
 
-.tab-content
-  #energy_sold.tab-pane.fade.show.active
-    = render "communities/sections/electricity/sales/energy_sold"
-  #customer-breakdown.tab-pane.fade
-    = render "communities/sections/electricity/sales/customer_breakdown", latest_sale: latest_sale, latest_year: latest_year
-  #sales-data.tab-pane.fade
-    = render "communities/sections/electricity/sales/data"
+-# .tab-content
+-#   #energy_sold.tab-pane.fade.show.active
+-#     = render "communities/sections/electricity/sales/energy_sold"
+-#   #customer-breakdown.tab-pane.fade
+-#     = render "communities/sections/electricity/sales/customer_breakdown", latest_sale: latest_sale, latest_year: latest_year
+-#   #sales-data.tab-pane.fade
+-#     = render "communities/sections/electricity/sales/data"
