add icons by communit name

--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -10,7 +10,7 @@
             .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow
               %h1.fw-bold.m-3
                 -# Using a people icon for "Communities" context
-                %i.bi.bi-people-fill.me-2
+                %i.bi.bi-search.me-2
                 Explore Communities
 
               -# Added a lead paragraph to match the visual style
