--- a/app/views/searches/advanced/_community_card.html.haml
+++ b/app/views/searches/advanced/_community_card.html.haml
@@ -3,6 +3,7 @@
 .mb-4.border.rounded.overflow-hidden.bg-light-subtle
   .p-3
     %h5.mb-2.d-flex.align-items-center.flex-wrap
+      %i.bi.bi-people-fill.me-2
       = link_to community.name, community_path(community), class: 'text-dark text-decoration-none'
 
     / === TAGS AREA ===
