--- a/app/views/grids/index.html.haml
+++ b/app/views/grids/index.html.haml
@@ -8,7 +8,7 @@
           .row.justify-content-center
             .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow
               %h1.fw-bold.m-3
-                %i.bi.bi-grid-fill.me-2
+                %i.bi.bi-grid.me-2
                 Grid Summaries
 
               %p.lead.fs-5.w-75.mx-auto.mb-4
