--- a/app/views/communities/sections/electricity/_sales.html.haml
+++ b/app/views/communities/sections/electricity/_sales.html.haml
@@ -10,24 +10,24 @@
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
       %li.nav-item
+        = link_to "#energy_sold", class: "nav-link active", data: { bs_toggle: "tab" } do
+          %i.bi.bi-bar-chart-fill.me-1
+          Energy Sold
+      -# - if latest_sale&.any_customer_type_data?
+      -#   %li.nav-item
+      -#     = link_to "#customer-breakdown", class: "nav-link", data: { bs_toggle: "tab" } do
+      -#       %i.bi.bi-pie-chart.me-1
+      -#       Customer Breakdown
+      %li.nav-item
         = link_to "#sales-data", class: "nav-link", data: { bs_toggle: "tab" } do
           %i.bi.bi-table.me-1
           Data
--#       %li.nav-item
--#         = link_to "#energy_sold", class: "nav-link active", data: { bs_toggle: "tab" } do
--#           %i.bi.bi-bar-chart-fill.me-1
--#           Energy Sold
--#       - if latest_sale&.any_customer_type_data?
--#         %li.nav-item
--#           = link_to "#customer-breakdown", class: "nav-link", data: { bs_toggle: "tab" } do
--#             %i.bi.bi-pie-chart.me-1
--#             Customer Breakdown
 
 
 .tab-content
+  #energy_sold.tab-pane.fade.show.active
+    = render "communities/sections/electricity/sales/energy_sold"
+  -# #customer-breakdown.tab-pane.fade
+  -#   = render "communities/sections/electricity/sales/customer_breakdown", latest_sales: latest_sales, latest_year: latest_year
   #sales-data.tab-pane.fade
     = render "communities/sections/electricity/sales/data"
-  -# #energy_sold.tab-pane.fade.show.active
-  -#   = render "communities/sections/electricity/sales/energy_sold"
-  -# #customer-breakdown.tab-pane.fade
-  -#   = render "communities/sections/electricity/sales/customer_breakdown", latest_sale: latest_sale, latest_year: latest_year
